# micro-program-framework

./: .gitignore  CMakeLists.txt  README.md
cmake/: GenerateMPFBuildConfigFile.cmake  RunGit.cmake
include/mpf/concepts/: Types.h
include/mpf/conf/: BuildConfig.h  LibraryConfig.h
include/mpf/core/: List.h  LogSink.h  Logging.h  Program.h  Subsystem.h  SubsystemList.h
include/mpf/types/: FixedFormattedString.h  FixedPackedString.h  List.h
include/mpf/util/: FixedFormattedString.h  StringUtil.h  macros.h
src/mpf/conf/: BuildConfig.cpp.in  LibraryConfig.cpp.in
src/mpf/core/: Logging.cpp  Program.cpp  Subsystem.cpp  SubsystemList.cpp
src/mpf/util/: StringUtil.cpp
